[gd_scene load_steps=7 format=3 uid="uid://3xwx03108qdv"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_qjiwa"]
[ext_resource type="StyleBox" uid="uid://browefsk4scss" path="res://Themes/MainMenuButton.tres" id="2_nnk0g"]
[ext_resource type="Texture2D" uid="uid://b8wrjr3fviudq" path="res://Assets/sunny-land-phaser-project/sunny-land/assets/environment/back.png" id="3_vnes7"]

[sub_resource type="LabelSettings" id="LabelSettings_awthw"]
font_size = 100
outline_size = 10
outline_color = Color(0, 0.52549, 1, 1)
shadow_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_i5uyp"]
font_size = 60
font_color = Color(1, 1, 0, 1)
outline_size = 10
outline_color = Color(0.745098, 0.462745, 0, 1)
shadow_size = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2ys8d"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_qjiwa")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(1155, 616)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1155.0
offset_bottom = 645.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="TitleName" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Delivery Guy"
label_settings = SubResource("LabelSettings_awthw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreText" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "High Score: 0"
label_settings = SubResource("LabelSettings_i5uyp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_2ys8d")

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/Panel/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/Panel/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(310, 137)
layout_mode = 2
theme_override_colors/font_color = Color(0.184314, 0.741176, 1, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("2_nnk0g")
theme_override_styles/hover = ExtResource("2_nnk0g")
theme_override_styles/pressed = ExtResource("2_nnk0g")
theme_override_styles/focus = ExtResource("2_nnk0g")
text = "Play"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/Panel/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(310, 137)
layout_mode = 2
theme_override_colors/font_color = Color(0.184314, 0.741176, 1, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("2_nnk0g")
theme_override_styles/hover = ExtResource("2_nnk0g")
theme_override_styles/pressed = ExtResource("2_nnk0g")
theme_override_styles/focus = ExtResource("2_nnk0g")
text = "Exit
"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
follow_viewport_enabled = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Back" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(576, 323)
scale = Vector2(2.99479, 2.68333)
texture = ExtResource("3_vnes7")
metadata/_edit_lock_ = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/Panel/CenterContainer/HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/Panel/CenterContainer/HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
